# genedit-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-build.sh  docker-compose.yml  download_models.sh  nginx.conf.template  pyproject.toml  start-fastapi.sh  start-vllm.sh  start.sh
.github/workflows/: docker-image.yml
app/: main.py
app/configs/: __init__.py
app/internal/: generation.py  object_detection.py  segmentation.py
app/models/: generation.py  object_detection.py  segmentation.py
app/routers/: __init__.py  generation.py  object_detection.py  segmentation.py
app/utils/: common.py
tests/: agent.ipynb  test-vllm.py  tests.ipynb
tests/client/: __init__.py  generation.py  models.py  object_detection.py  segmentation.py  utils.py
