[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "diffusers>=0.35.2",
    "fastapi>=0.119.0",
    "pydantic>=2.12.3",
    "timm>=1.0.21",
    "torch==2.8.0",
    "transformers>=4.57.1",
    "vllm>=0.11.0",
]

[dependency-groups]
dev = [
    "langchain>=1.0.2",
    "langchain-openai>=1.0.1",
]
